--- a/style.css
+++ b/style.css
@@ -228,24 +228,45 @@ body {
     color: #f1f1f1;
   }
   
-  .sidebar .closebtn {
-    position: absolute;
-    top: 0;
-    right: 2.5rem;
-    font-size: 3.6rem;
-    margin-left: 5rem;
-  }
   
-  .openbtn {
-    font-size: 2rem;
+  #times {
+      opacity: 0;
+      -webkit-transition: opacity .5s;
+      transition: opacity .5s;
+      position: absolute;
+      top: .5rem;
+      left: .7rem;
+      width: 2.5rem;
+  }
+
+  #bars{
+      opacity: 1;
+      transition: opacity .5s;
+      position: absolute;
+      top: .5rem;
+      left: .7rem;
+      width: 2.5rem;
+
+  }
+  #icon {
+    position: relative;
+    font-size: 3rem;
     cursor: pointer;
     color: rgb(7, 7, 7);
-    padding: 1rem 1.5rem;
+    padding: 2rem;
     border: none;
     border-radius: 10%;
+
   }
-  
-  .openbtn:hover {
+  .crossicon #times {
+      opacity: 1;
+  }
+
+  .crossicon #bars {
+      opacity: 0;
+  }
+
+  #icon:hover {
     background-color: #646464;
     color: #f1f1f1;
   }
@@ -262,6 +283,15 @@ body {
     top: 1rem;
     left: 1rem;
   }
+
+  .opened-sidebar {
+    width: 25rem;
+  }
+
+  .opened-button {
+      margin-left: 25rem;
+  }
+
 
 
 
