--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ html {
           color: black; }
         html body #navDiv #navButton #times {
           display: none; }
-    html body #mySidebar {
+    html body #sidebar {
       height: 100%;
       position: fixed;
       top: 0;
@@ -30,14 +30,14 @@ html {
       background-color: #d6ccfc;
       z-index: 1;
       width: 0px; }
-      html body #mySidebar a {
+      html body #sidebar a {
         padding: 8px;
         text-decoration: none;
         font-size: 25px;
         color: #201f1f;
         display: block;
         transition: 0.3s; }
-      html body #mySidebar a:hover {
+      html body #sidebar a:hover {
         color: #f1f1f1; }
     html body #header {
       color: #ffffff;
@@ -156,6 +156,29 @@ html {
             opacity: 1; }
           html body #about-me-section #aboutmewrapper .pic-gallery-wrapper .pic-gallery .img__wrap:hover .img__img {
             opacity: 0.25; }
+    html body #portfolio-section #portfolio {
+      background-color: #5fcc8d; }
+    html body #portfolio-section #portfoliowrapper {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      flex-wrap: wrap; }
+      html body #portfolio-section #portfoliowrapper .projektcontainer {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        height: 700px;
+        width: 50%;
+        padding: 20px; }
+        @media (max-width: 800px) {
+          html body #portfolio-section #portfoliowrapper .projektcontainer {
+            width: 100%; } }
+        html body #portfolio-section #portfoliowrapper .projektcontainer .projektlink {
+          color: inherit; }
+        html body #portfolio-section #portfoliowrapper .projektcontainer .projekttitle {
+          font-size: 20px;
+          font-weight: 500; }
     html body #work-section #CV {
       background-color: #e0aade; }
     html body #work-section #workwrapper {
