--- a/sass/main.scss
+++ b/sass/main.scss
@@ -24,7 +24,7 @@ html {
                 }
             }
         }
-        #mySidebar {
+        #sidebar {
             height: 100%;
             position: fixed;
             top: 0;
@@ -189,6 +189,40 @@ html {
             }
             
             
+        }
+
+        #portfolio-section {
+            #portfolio {
+                background-color: #5fcc8d;
+            }
+            #portfoliowrapper{
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+                flex-wrap: wrap;
+
+                .projektcontainer {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-evenly;
+                    align-items: center;
+                    height: 700px;
+                    width: 50%;
+                    padding: 20px;
+                    @include tablet {
+                        width: 100%;                
+                    }
+
+                    .projektlink {
+                        color: inherit;
+                    }
+                    .projekttitle {
+                        font-size: 20px;
+                        font-weight: 500;
+                    }
+
+                }
+            }
         }
         
         #work-section {            
