--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,8 @@
 html {
   scroll-behavior: smooth; }
   html body {
-    font-family: 'Roboto Mono', monospace; }
+    font-family: 'Roboto Mono', monospace;
+    background-color: #f0ece8; }
     html body #navDiv {
       position: fixed;
       top: 30px;
