--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,8 @@ html {
     scroll-behavior: smooth;
     body {
         font-family: 'Roboto Mono', monospace;
+        background-color: #f0ece8;
+
         #navDiv {
             position: fixed;
             top: 30px;
