--- a/sass/main.scss
+++ b/sass/main.scss
@@ -73,8 +73,14 @@ html {
                 flex-direction: row;
                 @include phone {
                     flex-direction: column;
-                    justify-content: space-between;                }
-                .link {
+                    justify-content: space-between; 
+                    padding: 0;               
+                }
+                li {
+                    @include phone {
+                        padding: 10px;
+                    }
+                    .link {
                     text-decoration: none;
                     color: inherit;
                     margin-left: 30px;
@@ -82,14 +88,16 @@ html {
                     font-weight: 300;
                     font-size: 20px;
                     @include phone {
+                        padding: 5px;
                         margin: 0;
-                        padding: 20px;
+                    }
+                    }
+                    .link:hover {
+                        background-color: rgba(0, 0, 0, 0.4);
+                        font-weight: 700;
                     }
                 }
-                .link:hover {
-                    background-color: rgba(0, 0, 0, 0.4);
-                    font-weight: 700;
-                }
+                
             }
         }
         .title-main {
